<resources>


    <string name="app_name">وش الغدا؟</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homebutton">Button</string>
    <string name="FavoriteButton">Button</string>
    <string name="home">home</string>
    <string name="HomeButton">Button</string>
    <string name="logo">logo</string>
    <string name="الرئيسية">الرئيسية</string>
    <string name="المفضلة">المفضلة</string>
    <string name="البحث">البحث</string>
    <string name="ملف_التعريف">ملف التعريف</string>

    <string name="Rname">اسم الوصفة</string>
    <string name="button">Button</string>
    <string name="switch1">إظهار الوصفات التي تحتوي على هذه المكونات فقط</string>

    <string name="todo">TODO</string>
    <string name="buttton1">اذهب</string>
    <string name="button3">تصفح الوصفات</string>
    <string name="button2">الاسم</string>
    <string name="button1">المكونات</string>
    <string name="Vege">الخضراوات</string>
    <string name="Meat">اللحوم</string>
    <string name="أذهب">اذهب</string>
    <string name="Fruit">الفواكة</string>
    <string name="tVege">خضار</string>
    <string name="tMeat">لحوم</string>
    <string name="go">اذهب</string>
    <string name="Egg_with_milk">البيض بالحليب</string>
    <string name="by">بواسطة:</string>
    <string name="name">روان</string>
    <string name="date">بتاريخ:</string>
    <string name="_24_09_2018">24/09/2018</string>
    <string name="ing">المقادير:</string>

    <string name="All_ing">هنا تكون جميع المقادير.</string>
    <string name="steps">الطريقة:</string>
    <string name="steps_desc">هنا تعرض الطريقة.</string>

    <string name="Add_to_fav">إضافة الى مفضلتي</string>

    <string name="تكفي">تكفي:</string>
    <string name="العدد">4</string>
    <string name="أشخاص">أشخاص</string>
    <string name="وقت_التحضير">وقت التحضير:</string>
    <string name="_20">20 دقيقة</string>

    <string name="فواكة">فواكة</string>
    <string name="تصفح_الوصفات">تصفح الوصفات:</string>

    <string name="غداء">غداء</string>
    <string name="فطور">فطور</string>

    <string name="عشاء">عشاء</string>

    <string name="مشروبات">مشروبات</string>
    <string name="r1">TextView</string>
    <string name="r2">TextView</string>
    <string name="r3">TextView</string>
    <string name="s">البحث بواسطة</string>
    <string name="s2">البحث بواسطة المكون</string>
    <string name="s3">اسم الوصفة</string>


    <string-array name="Category">
        <item>القسم</item>
        <item>غداء</item>
        <item>عشاء</item>
        <item>فطور</item>
        <item>مشروبات</item>
    </string-array>


    <string-array name="Cuisine">
        <item>القسم</item>
        <item>شعبي</item>
        <item>ايطالي</item>
        <item>فرنسي</item>
    </string-array>
    <string-array name="CookingTime">
        <item>وقت التحضير</item>
        <item>5/10 دقائق</item>
        <item>10/15 دقيقة</item>
        <item>15/30 دقيقة</item>
        <item>30/50 دقيقة</item>
        <item>50/70 دقيقة</item>
        <item>70/100 دقيقة</item>
        <item>100/120 دقيقة</item>
    </string-array>

    <string name="menu">القائمة</string>
    <string name="username">Safaa Mohammed</string>
    <string name="item1">وصفاتي</string>
    <string name="item2">اضافة وصفه</string>
    <string name="item3">تسجيل الخروج</string>


    <string name="email2">البريد الإلكتروني</string>
    <string name="emailPlease">الرجاء إدخال بريدك الإلكتروني المسجل</string>
    <string name="send">إرسال</string>
    <string name="restore2">استعادة كلمة المرور</string>
    <string name="enter1">دخول</string>
    <string name="required1">حقول مطلوبة *</string>
    <string name="username1">اسم المستخدم</string>
    <string name="password1">كلمة المرور</string>
    <string name="enter3">دخول</string>
    <string name="haventAcc">ليس لديك حساب؟</string>
    <string name="login">تسجيل</string>
    <string name="forgetPass">نسيت كلمة المرور؟</string>
    <string name="clickHere">اضغط هنا</string>
    <string name="star1">*</string>
    <string name="star2">*</string>
    <string name="theRegister">التسجيل</string>
    <string name="required2">حقول مطلوبة *</string>
    <string name="username2">اسم المستخدم</string>
    <string name="displayName">اسم العرض</string>
    <string name="email1">البريد الإلكتروني</string>
    <string name="password2">كلمة المرور</string>
    <string name="surePass">تأكيد كلمة المرور</string>
    <string name="register">تسجيل</string>
    <string name="restore1">إعادة تعيين</string>
    <string name="haveAcc">لديك حساب؟</string>
    <string name="enter2">دخول</string>
    <string name="star3">*</string>
    <string name="star4">*</string>
    <string name="star5">*</string>
    <string name="star6">*</string>
    <string name="star7">*</string>
    <string name="popular">اشهر الوصفات</string>
    <string name="recommended">اخترنا لك</string>
    <string name="favourite">مفضلتك</string>
    <string name="recipeName">أسم الوصفه</string>
    <string name="personalinformation">المعلومات الشخصية</string>
    <string name="userName">اسم المستخدم:</string>
    <string name="Email">البريد الالكتروني:</string>
    <string name="myRecipes">وصفاتي</string>
    <string name="editProfile">تعديل المعلومات الشخصية</string>
    <string name="displayname">اسم العرض:</string>
    <string name="Necessary">حقول مطلوبة *</string>
    <string name="Reset">اعادة التعيين</string>
    <string name="AddNewRecipe">اضافة وصفة جديدة</string>
    <string name="Ingredients">المكونات:</string>
    <string name="Ingredient1">المكون١</string>
    <string name="Quantity">الكمية:</string>
    <string name="Steps">خطوات التخضير:</string>
    <string name="image">صورة الوصفة:</string>
    <string name="Time">وقت التحضير:</string>
    <string name="suffice">تكفي:</string>
    <string name="add">اضافة</string>
    <string name="addNewRecipe">اضافة وصفة جديدة</string>
    <string name="editRecipe">تعديل وصفة</string>
    <string name="delete" />
    <string name="Ingredient2" />
    <string name="Ingredient3" />
    <string name="buttonDown" />
    <string name="buttonUp" />
    <string name="recipeImage">صورة الوصفة:</string>
    <string name="change">تغيير</string>
    <string name="imageRecipe" />
    <string name="people">اشخاص/ شخص</string>
    <string name="minute">دقائق/ دقيقة</string>
    <string name="time">مدة التحضير:</string>
    <string name="edit">تعديل</string>
    <string name="_1">1</string>
    <string name="textview">TextView</string>
    <string name="noRecipe" />
    <string name="email">البريد الالكتروني:</string>
    <string name="password">كلمة المرور:</string>
    <string name="password0">اعادة كلمة المرور:</string>
    <string name="deletefromf">الغاء من مفضلتي</string>
    <string name="imageView10">مقبلات</string>
    <string name="imageView13">حلويات</string>
    <string name="حلويات">حلويات</string>
    <string name="مقبلات">مقبلات</string>

    <string-array name="sections">
        <item>اختر القسم</item>
        <item>فطور</item>
        <item>غداء</item>
        <item>عشاء</item>
        <item>مقبلات</item>
        <item>حلويات</item>
        <item>مشروبات</item>
    </string-array>

    <string-array name="ingredients">
        <item>اختر المكون</item>
        <item>طحين</item>
        <item>جبن</item>
        <item>بيض</item>
    </string-array>

    <string-array name="quantity">
        <item>اختر المقياس</item>
    </string-array>

    <string-array name="meat">
        <item>لحوم</item>
        <item>أسماك</item>
        <item>دواجن</item>
        <item>بيض</item>
    </string-array>

    <string-array name="egg">
        <item>بيض</item>
        <item>طحين</item>
        <item>جبن</item>
        <item>ذرة</item>
    </string-array>

    <string-array name="nothing">
        <item>لاشيء</item>

    </string-array>
</resources>
