<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/enter1"
        android:layout_width="191dp"
        android:layout_height="54dp"
        android:layout_margin="@android:dimen/dialog_min_width_minor"
        android:text="@string/enter1"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="122dp" />

    <TextView
        android:id="@+id/required1"
        android:layout_width="320dp"
        android:layout_height="28dp"
        android:text="@string/required1"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="188dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="296dp"
        android:layout_height="41dp"
        android:background="#F5F5F5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="228dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/username1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="296dp"
        android:layout_height="41dp"
        android:background="#F5F5F5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="277dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/enter3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/enter3"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="383dp" />

    <TextView
        android:id="@+id/haventAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/haventAcc"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="449dp" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="449dp" />

    <TextView
        android:id="@+id/forgetPass"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="@string/forgetPass"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="474dp" />

    <TextView
        android:id="@+id/clickHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clickHere"
        android:textColor="@color/colorPrimary"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="476dp" />

    <TextView
        android:id="@+id/star1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/star1"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="236dp" />

    <TextView
        android:id="@+id/star2"
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:text="@string/star2"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="285dp" />

</android.support.constraint.ConstraintLayout>